[package]
name = "bevy_liquidfun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
libliquidfun-sys = { git = "https://github.com/mmatvein/libliquidfun-sys.git" }
autocxx = "0.26.0"

[dev-dependencies]
rand = "0.8"